Add .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 
 # Individual user preferences
 xcuserdata/
+
+
+# This one file seems to be an ongoing problem
+KeaWatch/KakaGo.xcodeproj/project.xcworkspace/xcuserdata/mikey.xcuserdatad/UserInterfaceState.xcuserstate
