--- a/KeaWatch/KeaWatch/Info.plist
+++ b/KeaWatch/KeaWatch/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera is needed to take picture of Kaka</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Select photo of Kaka</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
